--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -554,7 +554,7 @@
           de tu ciudad?
         </h2>
         <p class="text-xl mb-8 opacity-90">
-          Únete a cientos de conjuntos que ya revolucionaron su administración con VECINOS CONECTADOS
+          Únete a cientos de conjuntos que ya revolucionaron su administración con<br>VECINOS CONECTADOS
         </p>
       </div>
 
